# ModSync

./: CMakeLists.txt  README.md  iconpicker.cpp  iconpicker.h  main.cpp  mainwindow.cpp  mainwindow.h  modpackwizard.cpp  modpackwizard.h  modsyncutils.cpp  modsyncutils.h  resources.qrc
